--- a/adv grid/index.html
+++ b/adv grid/index.html
@@ -5,6 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        *{
+            margin : 0px;
+            padding : 0px;
+            box-sizing: border-box;
+        }
+        body{
+            width : 100%;
+            height : 100%;
+        }
+        .container{
+            width : 100%;
+            height : 100%;
+            padding : 4rem;
+            background-color: aqua;
+            display : grid;
+            gap : 1rem;
+            /* grid-template-columns: repeat(3 , 1fr); */
+            grid-template-columns: repeat(auto-fit , minmax(200px,500px)); 
+        }
+        .item{
+            padding : 1 rem;
+            border : 3px solid black;
+            background-color : blue;
+            color: white;
+        }
+    </style>
 </head>
 <body>
 
